--- a/.env.exemple
+++ b/.env.exemple
@@ -1,8 +1,10 @@
 DATABASE_URL=
 JWT_SECRET=
+NODE_ENV=
 PORT=
 PASSWORD_ADMIN=
-
+ADMIN_EMAIL=
+N8N_WEBHOOK_LEAD_NOTIFY=
 POSTGRESQL_USERNAME=
 POSTGRESQL_PASSWORD=
 POSTGRESQL_DATABASE=
