--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/server.js",
   "engines": {
-    "node": "18.18.0"
+    "node": "20.19.0"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
@@ -20,18 +20,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@prisma/client": "^6.1.0",
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcrypt": "5.0.2",
     "@types/jsonwebtoken": "9.0.5",
-    "@types/node": "20.10.3",
+    "@types/node": "^20.19.0",
+    "@types/pg": "^8.16.0",
     "@types/uuid": "9.0.7",
     "@types/validator": "13.11.7",
     "eslint": "8.55.0",
-    "prisma": "^6.1.0",
+    "prisma": "^7.2.0",
     "tsup": "^8.0.2",
     "tsx": "4.6.2",
-    "typescript": "5.3.3",
+    "typescript": "5.9.3",
     "vite-tsconfig-paths": "4.2.1",
     "vitest": "1.0.1",
     "vitest-tsconfig-paths": "3.4.1"
@@ -39,11 +39,14 @@
   "dependencies": {
     "@fastify/cors": "8.4.2",
     "@fastify/jwt": "7.2.4",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "bcrypt": "^5.1.1",
-    "dotenv": "16.3.1",
+    "dotenv": "^17.2.3",
     "fastify": "4.24.3",
     "jsonwebtoken": "9.0.2",
     "node-cache": "^5.1.2",
+    "pg": "^8.16.3",
     "uuid": "9.0.1",
     "validator": "13.11.0",
     "zod": "3.22.4"
